[package]
name = "unstyled"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Yannik_Sc"]
description = "Unstyled is just another library which allows to write scoped CSS styles in Rust"
repository = "https://github.com/YannikSc/unstyled"
readme = "../README.md"

[dependencies]
unstyled_macro = { path = "../unstyled_macro", version = "0.1.0" }
