[package]
name = "unstyled_macro"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["Yannik_Sc"]
description = "Unstyled is just another library which allows to write scoped CSS styles in Rust"
repository = "https://github.com/YannikSc/unstyled"
readme = "../README.md"

[[example]]
name = "leptos"
required-features = ["leptos-example"]

[lib]
proc-macro = true

[dependencies]
leptos = { version = "0.5", optional = true }

[features]
leptos-example = ["leptos"]
css-block-lint = []

